[package]
name = "lm-amp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.35"
csv = "1.3.0"
headless_chrome = "1.0.9"
reqwest = "0.11.25"
rust_decimal = "1.36.0"
# playwright = "0.0.20"
serde = "1.0.197"
serde_json = "1.0.114"
tempdir = "0.3.7"
tokio = { version = "1.36.0", features = [ "rt", "macros", "rt-multi-thread" ] }
totp-rs = "5.5.1"

[[bin]]
name = "lm-amp"
path = "main.rs"
